@@ -16,7 +16,6 @@
 package org.talend.sdk.component.runtime.beam.customizer;
 
 import static java.util.Optional.ofNullable;
-import static java.util.stream.Collectors.toList;
 
 import java.io.BufferedReader;
 import java.io.ByteArrayInputStream;
@@ -115,7 +114,7 @@ enum Indices {
                         .lines()
                         .map(String::trim)
                         .filter(it -> !it.startsWith("#") && !it.isEmpty())
-                        .collect(toList())).stream();
+                        .toList()).stream();
             } catch (final IOException e) {
                 throw new IllegalStateException(e);
             }
