@@ -15,8 +15,6 @@
  */
 package org.talend.sdk.component.runtime.record.json;
 
-import static java.util.stream.Collectors.toList;
-
 import java.io.OutputStream;
 import java.io.Writer;
 import java.lang.reflect.Field;
@@ -153,7 +151,7 @@ public class RecordJsonGenerator implements JsonGenerator {
                                             .map(v -> ((JsonValue) v)
                                                     .getValueType()
                                                     .equals(ValueType.TRUE))
-                                            .collect(toList()));
+                                            .toList());
                 } else {
                     objectBuilder
                             .withArray(createEntryForJsonArray(name, (Collection) value),
@@ -320,53 +318,48 @@ public class RecordJsonGenerator implements JsonGenerator {
 
         final String name;
         Object previous = builders.getLast();
-        if (previous instanceof NamedBuilder) {
-            final NamedBuilder namedBuilder = (NamedBuilder) previous;
+        if (previous instanceof NamedBuilder namedBuilder) {
             name = namedBuilder.name;
             previous = namedBuilder.builder;
         } else {
             name = null;
         }
 
-        if (last instanceof List) {
-            final List array = (List) last;
-            if (previous instanceof Collection) {
-                arrayBuilder = (Collection) previous;
+        if (last instanceof List array) {
+            if (previous instanceof Collection collection) {
+                arrayBuilder = collection;
                 objectBuilder = null;
                 arrayBuilder.add(array);
-            } else if (previous instanceof Record.Builder) {
-                objectBuilder = (Record.Builder) previous;
+            } else if (previous instanceof Record.Builder builder) {
+                objectBuilder = builder;
                 arrayBuilder = null;
                 objectBuilder.withArray(createEntryBuilderForArray(name, array).build(), prepareArray(array));
             } else {
                 throw new IllegalArgumentException("Unsupported previous builder: " + previous);
             }
-        } else if (last instanceof Record.Builder) {
-            final Record.Builder object = (Record.Builder) last;
-            if (previous instanceof Collection) {
-                arrayBuilder = (Collection) previous;
+        } else if (last instanceof Record.Builder object) {
+            if (previous instanceof Collection collection) {
+                arrayBuilder = collection;
                 objectBuilder = null;
                 arrayBuilder.add(object);
-            } else if (previous instanceof Record.Builder) {
-                objectBuilder = (Record.Builder) previous;
+            } else if (previous instanceof Record.Builder builder) {
+                objectBuilder = builder;
                 arrayBuilder = null;
                 objectBuilder.withRecord(name, objectBuilder.build());
             } else {
                 throw new IllegalArgumentException("Unsupported previous builder: " + previous);
             }
-        } else if (last instanceof NamedBuilder) {
-            final NamedBuilder<?> namedBuilder = (NamedBuilder) last;
-            if (previous instanceof Record.Builder) {
-                objectBuilder = (Record.Builder) previous;
-                if (namedBuilder.builder instanceof List) {
-                    final List array = (List) namedBuilder.builder;
+        } else if (last instanceof NamedBuilder namedBuilder) {
+            if (previous instanceof Record.Builder builder1) {
+                objectBuilder = builder1;
+                if (namedBuilder.builder instanceof List array) {
                     objectBuilder
                             .withArray(createEntryBuilderForArray(namedBuilder.name, array).build(),
                                     prepareArray(array));
                     arrayBuilder = null;
-                } else if (namedBuilder.builder instanceof Record.Builder) {
+                } else if (namedBuilder.builder instanceof Record.Builder builder) {
                     objectBuilder
-                            .withRecord(namedBuilder.name, ((Record.Builder) namedBuilder.builder).build());
+                            .withRecord(namedBuilder.name, builder.build());
                     arrayBuilder = null;
                 } else {
                     throw new IllegalArgumentException("Unsupported previous builder: " + previous);
@@ -384,8 +377,8 @@ public class RecordJsonGenerator implements JsonGenerator {
     private List prepareArray(final List array) {
         return ((Collection<?>) array)
                 .stream()
-                .map(it -> it instanceof Record.Builder ? ((Record.Builder) it).build() : it)
-                .collect(toList());
+                .map(it -> it instanceof Record.Builder builder ? builder.build() : it)
+                .toList();
     }
 
     private Schema.Entry createEntryForJsonArray(final String name, final Collection array) {
@@ -514,8 +507,8 @@ public class RecordJsonGenerator implements JsonGenerator {
 
         @Override
         public JsonGenerator createGenerator(final Writer writer) {
-            if (writer instanceof OutputRecordHolder) {
-                return new RecordJsonGenerator(factory.get(), jsonb.get(), (OutputRecordHolder) writer);
+            if (writer instanceof OutputRecordHolder outputRecordHolder) {
+                return new RecordJsonGenerator(factory.get(), jsonb.get(), outputRecordHolder);
             }
             throw new IllegalArgumentException("Unsupported writer: " + writer);
         }
