@@ -21,7 +21,6 @@ import static java.util.stream.Collectors.toMap;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.xbean.finder.AnnotationFinder;
@@ -43,7 +42,7 @@ public class FixedSchemaValidator implements Validator {
                 .filter(e -> e.getValue().isEmpty())
                 .map(e -> String.format("Empty @FixedSchema annotation's value in class %s.",
                         e.getKey().getSimpleName()))
-                .collect(Collectors.toList()));
+                .toList());
         // search for missing methods
         final List<String> methods = Stream
                 .concat(finder.findAnnotatedMethods(DiscoverSchema.class)
@@ -52,14 +51,14 @@ public class FixedSchemaValidator implements Validator {
                         finder.findAnnotatedMethods(DiscoverSchemaExtended.class)
                                 .stream()
                                 .map(m -> m.getDeclaredAnnotation(DiscoverSchemaExtended.class).value()))
-                .collect(Collectors.toList());
+                .toList();
         errors.addAll(classes.entrySet()
                 .stream()
                 .filter(e -> !e.getValue().isEmpty())
                 .filter(e -> !methods.contains(e.getValue()))
                 .map(e -> String.format("@FixedSchema '%s' in class %s is not declared anywhere as DiscoverSchema*.",
                         e.getValue(), e.getKey().getSimpleName()))
-                .collect(Collectors.toList()));
+                .toList());
 
         return errors.stream();
     }
