@@ -153,8 +153,7 @@ public class VaultClient {
     private Pattern compiledPassthroughRegex;
 
     private final Predicate<Throwable> shouldRetry = cause -> {
-        if (cause instanceof WebApplicationException) {
-            final WebApplicationException wae = (WebApplicationException) cause;
+        if (cause instanceof WebApplicationException wae) {
             final int status = wae.getResponse().getStatus();
             if (Status.NOT_FOUND.getStatusCode() == status || status >= 500) {
                 return false;
@@ -216,7 +215,7 @@ public class VaultClient {
                 .stream()
                 .filter(entry -> compiledPassthroughRegex.matcher(entry.getValue()).matches())
                 .map(cyphered -> cyphered.getKey())
-                .collect(toList());
+                .toList();
         if (cipheredKeys.isEmpty()) {
             return values;
         }
@@ -226,7 +225,7 @@ public class VaultClient {
 
     private CompletableFuture<Map<String, String>> prepareRequest(final Map<String, String> values,
             final List<String> cipheredKeys, final String tenantId) {
-        return get(cipheredKeys.stream().map(values::get).collect(toList()), clock.millis(), tenantId)
+        return get(cipheredKeys.stream().map(values::get).toList(), clock.millis(), tenantId)
                 .thenApply(decrypted -> values
                         .entrySet()
                         .stream()
@@ -245,13 +244,13 @@ public class VaultClient {
                 .stream()
                 .map(it -> new EntryWithIndex<>(index.getAndIncrement(), it))
                 .filter(it -> it.entry != null && !compiledPassthroughRegex.matcher(it.entry).matches())
-                .collect(toList());
+                .toList();
         if (clearValues.isEmpty()) {
             return doDecipher(values, currentTime, tenantId).toCompletableFuture();
         }
         if (clearValues.size() == values.size()) {
             final long now = clock.millis();
-            return completedFuture(values.stream().map(it -> new DecryptedValue(it, now)).collect(toList()));
+            return completedFuture(values.stream().map(it -> new DecryptedValue(it, now)).toList());
         }
         return doDecipher(values, currentTime, tenantId).thenApply(deciphered -> {
             final long now = clock.millis();
@@ -269,9 +268,9 @@ public class VaultClient {
                 .stream()
                 .filter(it -> !it.getValue().isPresent())
                 .map(Map.Entry::getKey)
-                .collect(toList());
+                .toList();
         if (missing.isEmpty()) { // no remote call, yeah
-            return completedFuture(values.stream().map(alreadyCached::get).map(Optional::get).collect(toList()));
+            return completedFuture(values.stream().map(alreadyCached::get).map(Optional::get).toList());
         }
         // do request
         return getOrRequestAuth()
@@ -330,8 +329,7 @@ public class VaultClient {
                                 final Throwable cause = e.getCause();
                                 String message = "";
                                 int status = cantDecipherStatusCode;
-                                if (cause instanceof WebApplicationException) {
-                                    final WebApplicationException wae = (WebApplicationException) cause;
+                                if (cause instanceof WebApplicationException wae) {
                                     final Response response = wae.getResponse();
                                     if (response != null) {
                                         if (response.getEntity() instanceof ErrorPayload) { // internal error
@@ -410,8 +408,7 @@ public class VaultClient {
                 //
                 .exceptionally(e -> {
                     final Throwable cause = e.getCause();
-                    if (cause instanceof WebApplicationException) {
-                        final WebApplicationException wae = (WebApplicationException) cause;
+                    if (cause instanceof WebApplicationException wae) {
                         final Response response = wae.getResponse();
                         String message = "";
                         if (wae.getResponse().getEntity() instanceof ErrorPayload) {
@@ -471,8 +468,7 @@ public class VaultClient {
     private void throwError(final Throwable cause) {
         String message = "";
         int status = cantDecipherStatusCode;
-        if (cause instanceof WebApplicationException) {
-            final WebApplicationException wae = (WebApplicationException) cause;
+        if (cause instanceof WebApplicationException wae) {
             final Response response = wae.getResponse();
             status = response.getStatus();
             if (response != null) {
